<resources>
    <string name="app_name">Cine Scope</string>
    <string name="title_my_movies">My Movies</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_webview">Webview</string>
    <string name="title_info">Information</string>
    <string name="no_connection">No Network Connection!</string>
    <string name="field_lookup_movie">Look Up Movie ...</string>
    <string name="no_movies_found">No Movies Found!
                                   Try Searching Again!</string>
    <string name="language">Language:</string>
    <string name="title_myMovies">My Movies</string>
    <string name="delete_Alert">Do you want to delete </string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="movie_search">Movie Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_information">App Information</string>
    <string name="title_settings">Settings</string>
    <string name="filter_voteHL">High to Low</string>
    <string name="sort_VoteLH">Low to High</string>
    <string name="sort_VoteClear">Clear Vote Filter</string>
    <string name="filter_votes">Filter Search on Votes:</string>
    <string name="filter_date">Filter By Date</string>
    <string name="latest_to_old">Latest</string>
    <string name="oldest">Oldest</string>
    <string name="reset">Reset</string>
    <string name="save">Save</string>

</resources>