<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_green_grey"
    tools:context=".ui.settings.SettingsFragment">

    <TextView
        android:id="@+id/filterVotes3"
        android:layout_width="193dp"
        android:layout_height="24dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="181dp"
        android:text="@string/filter_date"
        android:textColor="@color/design_default_color_background"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/safeResultSpinner"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/filterVotes"
        android:layout_width="193dp"
        android:layout_height="24dp"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="181dp"
        android:text="@string/filter_votes"
        android:textColor="@color/design_default_color_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.063" />

    <RadioGroup
        android:id="@+id/radioGroupVote"
        android:layout_width="343dp"
        android:layout_height="108dp"
        app:layout_constraintBottom_toTopOf="@+id/safeResultSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filterVotes"
        app:layout_constraintVertical_bias="0.188">

        <RadioButton
            android:id="@+id/sortVoteHL"
            android:layout_width="match_parent"
            android:textColor="@color/design_default_color_background"
            android:layout_height="wrap_content"
            android:text="@string/filter_voteHL" />

        <RadioButton
            android:id="@+id/sortVoteLH"
            android:layout_width="match_parent"
            android:textColor="@color/design_default_color_background"
            android:layout_height="wrap_content"
            android:text="@string/sort_VoteLH" />

    </RadioGroup>

    <Spinner
        android:id="@+id/safeResultSpinner"
        android:layout_width="341dp"
        android:layout_height="25dp"
        android:backgroundTint="@color/design_default_color_background"
        android:entries="@array/safe_result"
        android:popupBackground="@color/white"
        android:spinnerMode="dropdown"
        android:textColor="@color/design_default_color_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.281" />

    <RadioGroup
        android:id="@+id/radioGroupDate"
        android:layout_width="342dp"
        android:layout_height="96dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.552"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filterVotes3"
        app:layout_constraintVertical_bias="0.069">

        <RadioButton
            android:id="@+id/latest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/design_default_color_background"

            android:text="@string/latest_to_old" />

        <RadioButton
            android:id="@+id/oldest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/design_default_color_background"

            android:text="@string/oldest" />
    </RadioGroup>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/save"
        android:textColor="@color/design_default_color_background"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.869"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupDate"
        app:layout_constraintVertical_bias="0.005" />

    <Button
        android:id="@+id/resetBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/reset"
        android:textColor="@color/design_default_color_background"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/saveButton"
        app:layout_constraintHorizontal_bias="0.253"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupDate"
        app:layout_constraintVertical_bias="0.097" />

</androidx.constraintlayout.widget.ConstraintLayout>